--- a/style.css
+++ b/style.css
@@ -15,6 +15,7 @@ h1{
 
 section{
     display: flex;
+    margin-bottom: 100px;
 }
 
 .half-weidh{
@@ -42,4 +43,10 @@ section{
     background-image: url(images/top-banner.png);
     background-repeat: no-repeat;
     background-size: cover;
+}
+
+.dreem-big{
+    background-image: url(images/dream-bg.png);
+    background-repeat: no-repeat;
+    background-position: right;
 }
