--- a/style.css
+++ b/style.css
@@ -1,52 +1,85 @@
-@import url('https://fonts.googleapis.com/css2?family=Baloo+Bhaina+2&family=Inter:wght@100;200;300;400;500;600;700;800;900&family=Lobster&family=Montserrat:ital,wght@0,200;0,300;0,400;0,500;0,600;0,800;0,900;1,100;1,200;1,400;1,500;1,600;1,700&family=Nunito:wght@400;500;700;900&family=Oswald:wght@200;300;400;500;600;700&family=PT+Serif:wght@700&family=Playfair+Display:wght@700&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto+Slab:wght@100;200;300;400;500;600;700;800;900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Source+Sans+Pro:ital,wght@1,300&family=Work+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Baloo+Bhaina+2&family=Inter:wght@100;200;300;400;500;600;700;800;900&family=Lobster&family=Montserrat:ital,wght@0,200;0,300;0,400;0,500;0,600;0,800;0,900;1,100;1,200;1,400;1,500;1,600;1,700&family=Nunito:wght@400;500;700;900&family=Oswald:wght@200;300;400;500;600;700&family=PT+Serif:wght@700&family=Playfair+Display:wght@700&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto+Slab:wght@100;200;300;400;500;600;700;800;900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Source+Sans+Pro:ital,wght@1,300&family=Work+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 
-body{
-    font-family: 'Poppins', sans-serif;
-    margin: 0;
+body {
+  font-family: "Poppins", sans-serif;
+  margin: 0;
 }
 
-h1{
-    font-size: 50px;
+h1 {
+  font-size: 50px;
 }
 
-.orenge-color{
-    color: orange;
+h2{
+    font-size: 40px;
 }
 
-section{
-    display: flex;
-    margin-bottom: 100px;
+.orenge-color {
+  color: orange;
 }
 
-.half-weidh{
-    width: 50%;
-    padding-left: 5%;
+.flexible-container {
+  display: flex;
+  margin-bottom: 100px;
 }
 
-.half-weidh img{
-    width: 90%;
+.half-weidh {
+  width: 50%;
+  padding-left: 5%;
 }
 
-.half-weidh a{
-    background: #FF6E50;
-    color: #fff;
-    padding: 15px 30px;
-    text-decoration: none;
-    font-size: 15px;
-    font-weight: bold;
-    text-transform: uppercase;
-    padding-top: 10px;
+.half-weidh img {
+  width: 90%;
+}
+
+.half-weidh a {
+  background: #ff6e50;
+  color: #fff;
+  padding: 15px 30px;
+  text-decoration: none;
+  font-size: 15px;
+  font-weight: bold;
+  text-transform: uppercase;
+  padding-top: 10px;
+  border-radius: 5px;
+}
+
+.top-banner {
+  background-image: url(images/top-banner.png);
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+.dreem-big {
+  background-image: url(images/dream-bg.png);
+  background-repeat: no-repeat;
+  background-position: right;
+}
+
+.experiences-item{
+    box-shadow: 10px 10px 40px gray;
+    margin-left: 5%;
+    margin-right: 5%;
+    padding-left: 20px;
+    width: 40%;
+    
     border-radius: 5px;
 }
 
-.top-banner{
-    background-image: url(images/top-banner.png);
+.experiences-area{
+    background-image: url(images/exp-bg.png);
     background-repeat: no-repeat;
-    background-size: cover;
+    background-position: left;
+    padding-bottom:80px ;
 }
 
-.dreem-big{
-    background-image: url(images/dream-bg.png);
-    background-repeat: no-repeat;
-    background-position: right;
+#full-stack-developer{
+    border-left: 7px solid tomato;
+}
+
+#baby-web-beveloper{
+    border-left: 7px solid blue;
+}
+
+footer p{
+    text-align: center;  
 }
